@@ -1,3 +1,5 @@
+commited for glibc 2.31
+
 Index: glibc-2.28/sysdeps/hurd/include/hurd/signal.h
 ===================================================================
 --- glibc-2.28.orig/sysdeps/hurd/include/hurd/signal.h
