@@ -1,3 +1,5 @@
+Commited for glibc 2.31
+
 2012-09-05  Richard Braun  <rbraun@sceen.net>
 
        * hurd/hurdsig.c (sigstate_is_global_rcv): Do not return true
