@@ -1,3 +1,5 @@
+Commited for glibc 2.31
+
 From: Jeremie Koenig <jk@jk.fr.eu.org>
 Subject: [PATCH] Small signal fixes
 
