@@ -1,3 +1,5 @@
+Commited for glibc 2.31
+
 Subject: [PATCH] Global signal dispositions.
 
 Although they should not change the
