@@ -1,3 +1,5 @@
+Commited for glibc 2.31
+
 From: Samuel Thibault <samuel.thibault@ens-lyon.org>
 Subject: Enable global signal distribution in htl
 
