@@ -45,13 +45,13 @@ hurd-i386/tg-mach-hurd-link.diff
 hurd-i386/local-ED.diff
 hurd-i386/local-madvise_warn.diff
 hurd-i386/git-hurdsig-fixes.diff
-hurd-i386/tg-hurdsig-global-dispositions.diff
-hurd-i386/local-hurdsig-globaldisp-version.diff
+hurd-i386/git-hurdsig-global-dispositions.diff
+hurd-i386/git-hurdsig-globaldisp-version.diff
 hurd-i386/tg-hurdsig-SA_SIGINFO.diff
-hurd-i386/tg-hurdsig-fixes-2.diff
+hurd-i386/git-hurdsig-fixes-2.diff
 hurd-i386/tg-hooks.diff
 hurd-i386/local-usr.diff
-hurd-i386/tg-hurdsig-boot-fix.diff
+hurd-i386/git-hurdsig-boot-fix.diff
 hurd-i386/git-single-select-timeout.diff
 hurd-i386/git-setitimer.diff
 hurd-i386/tg-pie-sbrk.diff
@@ -72,8 +72,8 @@ hurd-i386/tg-eintr.diff
 hurd-i386/tg-libc_rwlock_recursive.diff
 hurd-i386/local-no_unsupported_ioctls.diff
 hurd-i386/local-exec_filename.diff
-hurd-i386/libpthread_sigs.diff
-hurd-i386/local-hurd_sigstate-PLT.diff
+hurd-i386/git-libpthread_sigs.diff
+hurd-i386/git-hurd_sigstate-PLT.diff
 hurd-i386/git-rlock.diff
 
 i386/local-biarch.diff
